crates/postgres-subsystem/postgres-core-builder/src/snapshots/postgres_core_builder__access_utils__tests__hof_call.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/access_utils.rs
expression: selection
---
Function:
  - column_path:
      - Relation:
          column_pairs:
            - self_column_id:
                table_id:
                  index: 1
                  generation: ~
                column_index: 0
              foreign_column_id:
                table_id:
                  index: 0
                  generation: ~
                column_index: 2
          self_table_id:
            index: 1
            generation: ~
          linked_table_id:
            index: 0
            generation: ~
          linked_table_alias: ~
          _phantom: ~
    field_path:
      Normal:
        - issues
  - name: some
    parameter_name: i
    expr:
      RelationalOp:
        Eq:
          - Path:
              - column_path:
                  - Leaf:
                      table_id:
                        index: 0
                        generation: ~
                      column_index: 1
                field_path:
                  Normal:
                    - title
              - i
          - Common:
              ContextSelection:
                context_name: AuthContext
                path:
                  - title
                  - []
