crates/postgres-subsystem/postgres-core-builder/src/snapshots/postgres_core_builder__access_utils__tests__many_to_one_non_pk_field.snap
---
source: crates/postgres-subsystem/postgres-core-builder/src/access_utils.rs
expression: selection
---
Path:
  - column_path:
      - Relation:
          column_pairs:
            - self_column_id:
                table_id:
                  index: 0
                  generation: ~
                column_index: 2
              foreign_column_id:
                table_id:
                  index: 1
                  generation: ~
                column_index: 0
          self_table_id:
            index: 0
            generation: ~
          linked_table_id:
            index: 1
            generation: ~
          linked_table_alias: assignees
          _phantom: ~
      - Leaf:
          table_id:
            index: 1
            generation: ~
          column_index: 2
    field_path: Invalid
  - Plain:
      type_id:
        Primitive:
          index: 4
          generation: ~
      type_name: String
  - ~
